keep sardine+http4
Signed-off-by: Dmitrii Puzikov <dmitrii.puzikov@gooddata.com>

--- a/gooddata-java/pom.xml
+++ b/gooddata-java/pom.xml
@@ -20,6 +20,12 @@
 
         <dependency>
             <groupId>com.gooddata</groupId>
+            <artifactId>gooddata-webdav-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.gooddata</groupId>
             <artifactId>gooddata-rest-common</artifactId>
         </dependency>
         <dependency>
