--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gooddata-java-parent</artifactId>
     <packaging>pom</packaging>
-    <version>5.0.0+api3-SNAPSHOT</version>
+    <version>5.0.0+api3</version>
     <name>${project.artifactId}</name>
     <description>GoodData Java SDK</description>
     <url>https://github.com/gooddata/gooddata-java</url>
@@ -27,7 +26,7 @@
         <url>git@github.com:gooddata/gooddata-java.git</url>
         <connection>scm:git:git@github.com:gooddata/gooddata-java.git</connection>
         <developerConnection>scm:git:git@github.com:gooddata/gooddata-java.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>gooddata-java-parent-5.0.0+api3</tag>
     </scm>
 
     <developers>
@@ -236,7 +235,7 @@
                                     <goal>check</goal>
                                 </goals>
                                 <configuration>
-                                    <rules/>
+                                    <rules />
                                 </configuration>
                             </execution>
                         </executions>
