--- a/gooddata-java-model/pom.xml
+++ b/gooddata-java-model/pom.xml
@@ -3,11 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gooddata-java-model</artifactId>
+    <name>${project.artifactId}</name>
 
     <parent>
         <artifactId>gooddata-java-parent</artifactId>
         <groupId>com.gooddata</groupId>
-        <version>5.0.1+api3-SNAPSHOT</version>
+        <version>5.0.0+api3-SNAPSHOT</version>
     </parent>
 
     <dependencies>
